--- a/AOE4_rankdown.ipynb
+++ b/AOE4_rankdown.ipynb
@@ -26,25 +26,25 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-24T19:44:51.119376Z",
-     "start_time": "2025-02-24T19:44:51.110773Z"
+     "end_time": "2025-02-26T18:05:05.257103Z",
+     "start_time": "2025-02-26T18:05:05.234324Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "max_run_time = 3600\n",
+    "max_run_time = 3600*2\n",
     "max_fail = 10\n",
     "screen_width, screen_height = 2560, 1600"
    ],
    "id": "71068fd8a674142c",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-24T19:44:51.525432Z",
-     "start_time": "2025-02-24T19:44:51.496216Z"
+     "end_time": "2025-02-26T18:05:05.769089Z",
+     "start_time": "2025-02-26T18:05:05.731043Z"
     }
    },
    "cell_type": "code",
@@ -135,13 +135,13 @@
    ],
    "id": "4c7a8211ad5d7feb",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-24T19:44:51.556275Z",
-     "start_time": "2025-02-24T19:44:51.542812Z"
+     "end_time": "2025-02-26T18:05:06.626021Z",
+     "start_time": "2025-02-26T18:05:06.598094Z"
     }
    },
    "cell_type": "code",
@@ -198,13 +198,13 @@
    ],
    "id": "74ef710d58a6552c",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-24T19:44:51.587010Z",
-     "start_time": "2025-02-24T19:44:51.573769Z"
+     "end_time": "2025-02-26T18:05:09.050166Z",
+     "start_time": "2025-02-26T18:05:09.038702Z"
     }
    },
    "cell_type": "code",
@@ -226,7 +226,7 @@
    ],
    "id": "3fb7d8f1040f6457",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 10
   },
   {
    "metadata": {
@@ -245,7 +245,7 @@
     "    print(f\"current state: {sm.state}\")\n",
     "    if (time.time() - t0 > max_run_time) and (sm.state == \"game ends\" or sm.state == \"match abstract\"):\n",
     "        break\n",
-    "    sm.act(dummy_action=True)\n",
+    "    sm.act(dummy_action=False)\n",
     "    time.sleep(2)"
    ],
    "id": "fd2b2e2ee8a82723",
